Fix card width on tablet and PC

--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -127,7 +127,7 @@
 
 @media (min-width: 768px) {
   .recipe-card {
-    width: 240px;
+    width: 250px;
     height: 264px;
     border-radius: 15px;
     margin-left: 32px;
